--- a/MonoGame.Framework/MonoGame.Framework.SDL2.csproj
+++ b/MonoGame.Framework/MonoGame.Framework.SDL2.csproj
@@ -105,7 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\StorageContainer.cs" />
     <Compile Include="Storage\StorageDevice.cs" />
-    <Compile Include="TextInputEventArgs.cs" />
+    <Compile Include="TextInputEventArgsEXT.cs" />
     <Compile Include="Audio\AudioChannels.cs" />
     <Compile Include="Media\MediaPlayer.cs" />
     <Compile Include="Media\MediaState.cs" />
